--- a/Views/Consulta/SeleccionarTurnoExistente.cshtml
+++ b/Views/Consulta/SeleccionarTurnoExistente.cshtml
@@ -21,7 +21,7 @@
             </select>
         </div>
     }
-
+    
     @if (ViewBag.Turnos != null)
     {
         <div class="form-group">
@@ -31,6 +31,6 @@
             </select>
         </div>
     }
-
+    <button type="submit" name="action" value="confirmar">Confirmar Turno</button>
     <button type="submit" class="btn btn-primary">Continuar</button>
 </form>
