--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,4 +5,9 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <a class="btn btn-primary" asp-controller="Dueno" asp-action="Index">Gestionar Dueños</a>
+    <a class="btn btn-primary" asp-controller="Veterinario" asp-action="Index">Gestionar Veterinarios</a>
+    <a class="btn btn-primary" asp-controller="Mascota" asp-action="Index">Gestionar mascotas</a>
+    <a class="btn btn-primary" asp-controller="Turno" asp-action="Index">Gestionar turnos</a>
+    <a class="btn btn-primary" asp-controller="Consulta" asp-action="Index">Gestionar Consultas</a>
 </div>
