--- a/Views/Turno/TodosLosTurnosPorMascota.cshtml
+++ b/Views/Turno/TodosLosTurnosPorMascota.cshtml
@@ -45,3 +45,15 @@ else
 {
     <p>No se encontraron turnos para esta mascota.</p>
 }
+<div class="mt-4">
+    <nav>
+        <ul class="pagination justify-content-center">
+            @for (int i = 1; i <= ViewBag.TotalPaginas; i++)
+            {
+                <li class="page-item @(i == ViewBag.Pagina ? "active" : "")">
+                    <a class="page-link" asp-action="Index" asp-route-pagina="@i">@i</a>
+                </li>
+            }
+        </ul>
+    </nav>
+</div>
